--- a/IsaacGymEnvs/assets/urdf/hanu_a3_description/setup.cfg
+++ b/IsaacGymEnvs/assets/urdf/hanu_a3_description/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/hanu_a3_description
+script_dir=$base/lib/hanu_a3_description
 [install]
-install-scripts=$base/lib/hanu_a3_description
+install_scripts=$base/lib/hanu_a3_description
