fix: reset spawn

--- a/IsaacGymEnvs/isaacgymenvs/cfg/train/HanuPPO.yaml
+++ b/IsaacGymEnvs/isaacgymenvs/cfg/train/HanuPPO.yaml
@@ -71,10 +71,10 @@ params:
     
     # Minibatch calculation: (numEnvs * horizon_length) / num_mini_batches
     # Default assumption: (4096 * 24) / 4 = 24576
-    minibatch_size: 4
+    minibatch_size: 384
     
     mini_epochs: 5 # Matches num_learning_epochs: 5
     critic_coef: 1.0 # Matches value_loss_coef: 1.0
     clip_value: True # Matches use_clipped_value_loss: true
-    seq_len: 4
+    seq_length: 4
     bounds_loss_coef: 0.0001
